Corrected the viewport, prevented display of scrollbars

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,4 +3,8 @@
 
 *{
     font-family: "Urbanist" , sans-serif;
+
+}
+body::-webkit-scrollbar{
+    display: none;
 }
